# roof_corrosion_mlops-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DATA_LICENSES.md  Makefile  PROGRESS.md  README.md  docker-compose.yml  kaggle_notebook.ipynb  package.json  pnpm-lock.yaml  run_cdse_request.py
.github/workflows/: README.md  cd.yml  ci.yml  deploy-runpod.yml  deploy-web.yml  pr-docker.yml
apps/web/: env.example  next.config.js  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/jobs/: route.ts
apps/web/src/app/api/ops/jobs/: route.ts
apps/web/src/app/api/quotation/: route.ts
apps/web/src/app/api/runpod/webhook/: route.ts
apps/web/src/app/ops/: page.tsx
apps/web/src/app/portal/: page.tsx
apps/web/src/lib/: auth.tsx  supabase.ts
data/: README.md
infra/prometheus/: prometheus.yml
infra/runpod/: api-pod.yaml  mlops-pod.yaml  training-pod.yaml
infra/runpod/serverless/: DEPLOY_GUIDE.md  SETUP_GUIDE.md  template.json
infra/runpod/serverless/inference/: Dockerfile  handler.py  requirements.txt  test_input.json
infra/runpod/serverless/tiered/: Dockerfile  handler.py  requirements.txt  template.json
infra/runpod/serverless/training/: Dockerfile  handler.py  requirements.txt  test_input.json
infra/supabase/: seed.py
infra/supabase/migrations/: 00001_initial_schema.sql  00002_add_job_metadata.sql
ml/: pyproject.toml  train.py
ml/baseline/: augmentation.py  eval_frozen.py  train_stage1_roof.py  train_stage2_corrosion.py
ml/baseline/configs/: stage1_roof.yaml  stage2_corrosion.yaml
ml/baseline/data/: download_datasets.sh  frozen_test_setup.py
ml/baseline/data/airs/: loader.py
ml/baseline/data/caribbean/: loader.py
ml/baseline/data/spacenet/: loader.py
ml/baseline/data/xbd/: loader.py
ml/baseline/models/: corrosion_detector.py  roof_detector.py
ml/data/: check_licenses.py
ml/eval/: active_learning.py  cml_pr_eval.py  cross_tier_benchmark.py  drift_monitor.py  nannyml_estimator.py  seasonal_drift.py
ml/flows/: baseline_flow.py  retrain_flow.py
ml/inference/: tier0.py  tier1.py
ml/ingestion/: __init__.py  cdse.py  cloud_mask.py  composite.py  features.py  overture.py  pleiades.py  theos2.py
ml/synth/: generate_synthetic.py
ml/tests/: __init__.py  test_cml_pr_eval.py  test_cross_tier_benchmark.py  test_features.py  test_nannyml_estimator.py  test_pleiades.py  test_registry.py  test_retrain_flow.py  test_seasonal_drift.py  test_theos2.py  test_tier0.py  test_tier1.py
ml/train/: train_multitask.py
ml/train/configs/: multitask_clay.yaml
ml/train/datasets/: roofnet.py
ml/train/models/: __init__.py  clay_multitask.py  registry.py
ml/training/: export_model.py
notebooks/: cdse_data_acquisition.ipynb
scripts/: deploy-inference.sh  deploy-production.sh  deploy-serverless.sh  deploy-training.sh  dev-api.sh  dev-relabel-worker.sh  dev-worker.sh  run-training.sh  setup.sh  test-handler-local.py
services/api/: Dockerfile.runpod  Dockerfile.runpod-lite  pyproject.toml  requirements-lite.txt
services/api/app/: db.py  main.py  middleware.py  queue.py  quote_engine.py  quote_pdf.py  region.py
services/api/app/inference/: footprint_client.py  nim_client.py  pipeline.py  pipeline_fm.py  relabel_worker.py  runpod_client.py  sam_client.py  shadow_deploy.py  tile_fetch.py  types.py  worker.py
services/api/app/routes/: feedback.py  health.py  metrics.py  quote.py
services/api/tests/: test_fm_pipeline.py  test_region.py  test_routes.py  test_sync_quote.py
