[project]
name = "roof-corrosion-ml"
version = "0.1.0"
description = "ML training pipeline for roof corrosion detection"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.41.0",
    "segment-anything>=1.0",
    "detectron2",
    "albumentations>=1.4.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "geopandas>=1.0.0",
    "opencv-python>=4.9.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "mlflow>=2.12.0",
    "dvc[s3]>=3.49.0",
    "prefect>=2.19.0",
    "optuna>=3.6.0",
    "evidently>=0.4.0",
    "label-studio-sdk>=0.0.18",
    "boto3>=1.34.0",
    "omegaconf>=2.1.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    # Phase 1a: CDSE ingestion stack
    "pystac-client>=0.9.0",
    "odc-stac>=0.3.11",
    "openeo>=0.48.0",
    "cubo>=2026.2.0",
    "planetary-computer>=1.0.0",
    # Phase 1a: cloud masking
    "omnicloudmask>=1.7.0",
    "s2cloudless>=1.7.0",
    "xarray>=2024.1.0",
    "rioxarray>=0.15.0",
    # Phase 1a: feature extraction + classifier
    "scikit-image>=0.23.0",
    "segmentation-models-pytorch>=0.3.0",
]

[project.optional-dependencies]
synth = [
    "bpy>=4.1.0",
    "noise>=1.2.0",
]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["baseline", "data"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["rasterio.*", "detectron2.*", "segment_anything.*", "bpy.*"]
ignore_missing_imports = true

[tool.uv]
python-version = "3.11"
index-url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' or platform_machine != 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
