[project]
name = "roof-corrosion-api"
version = "0.1.0"
description = "FastAPI inference service for roof corrosion detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.41.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "geopandas>=1.0.0",
    "Pillow>=10.3.0",
    "mlflow>=2.12.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
